# InspectionBox

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  nginx.conf
frontend/app/: form.html  script.js
reverse_proxy/: nginx.conf
