[tool.poetry]
name = "backend_server"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "backend_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
